Update histogram component with clipping and add to color correct
Remove old clipping slider

Minor fixes for histogram

 - add cors support for histogram endpoint
 - use tile server location when constructing URL

--- a/app-frontend/src/assets/styles/sass/_shame.scss
+++ b/app-frontend/src/assets/styles/sass/_shame.scss
@@ -513,6 +513,16 @@ rf-project-editor .leaflet-tile {
   color: #ccc;
 }
 
+.histogram-input {
+  margin-top: 0.5em;
+  .pull-right {
+    float: right;
+  }
+  .btn-group {
+    display: inline-flex !important;
+  }
+}
+
 .rzslider.dark {
   .rz-bubble {
     color: #ccc;
@@ -522,4 +532,10 @@ rf-project-editor .leaflet-tile {
 .rf-tooltip {
   min-width: 250px;
   text-align: left;
+}
+
+.nvd3.nv-line {
+  .nv-point {
+    display: none;
+  }
 }
